# otus_dz2

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  version.h  version.h.in
